# CosmicWatch_Geant4

./: .gitignore  CMakeLists.txt  README.md  cosmic_watch.cc
NIST/: RefractiveIndexNaI.csv  energies.py
biblio/: LYSO_background_by_size.pptx  Understanding the intrinsic radioactivity energy spectrum from 176Lu in LYSO scintillation crystals
data/: 100000eventsCompt_run0_nt_Event_t0.csv  100000eventsCompt_run0_nt_Event_t1.csv  100000eventsCompt_run0_nt_Event_t2.csv  100000eventsCompt_run0_nt_Event_t3.csv  100000events_run0_nt_Event_t0.csv  100000events_run0_nt_Event_t1.csv  100000events_run0_nt_Event_t2.csv  100000events_run0_nt_Event_t3.csv  10000events_run0_nt_Event_t0.csv  10000events_run0_nt_Event_t1.csv  10000events_run0_nt_Event_t2.csv  10000events_run0_nt_Event_t3.csv  1000events_run0_nt_Event_t0.csv  1000events_run0_nt_Event_t1.csv  1000events_run0_nt_Event_t2.csv  1000events_run0_nt_Event_t3.csv  100events_run0_nt_Event_t0.csv  100events_run0_nt_Event_t1.csv  100events_run0_nt_Event_t2.csv  100events_run0_nt_Event_t3.csv  10events_run0_nt_Event_t0.csv  10events_run0_nt_Event_t1.csv  10events_run0_nt_Event_t2.csv  10events_run0_nt_Event_t3.csv  LYSO_0,5doping_run0_10x10x20-base_nt_Event_t0.csv  LYSO_0,5doping_run0_10x10x20-base_nt_Event_t2.csv  LYSO_0,5doping_run0_10x10x20-base_nt_Event_t3.csv  LYSO_0,5doping_run0_3x3x20-base_nt_Event_t1.csv  LYSO_0,5doping_run0_3x3x20-base_nt_Event_t2.csv  LYSO_0,5doping_run0_4x4x22-base_nt_Event_t2.csv  LYSO_run0_10x10x20-base_nt_Event.csv  LYSO_run0_3x3x20-base_nt_Event_t0.csv  merged_1000events_run0.csv  (+31 more)
gammas/: README.md
(+145 files in other folders)
